[gd_scene load_steps=9 format=3 uid="uid://bpiq0e4oy68yx"]

[ext_resource type="Script" uid="uid://fy1h7puheajr" path="res://src/maze.gd" id="1_x2hdw"]
[ext_resource type="PackedScene" uid="uid://b3ml34bssywkr" path="res://scene/cheshire.tscn" id="2_sfl3n"]
[ext_resource type="PackedScene" uid="uid://dwvyc2qlcdag0" path="res://scene/chessboard_blank.tscn" id="3_x2hdw"]
[ext_resource type="Script" uid="uid://d37nkxik3au1i" path="res://src/pastor.gd" id="4_wtgk7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sfl3n"]
sky_top_color = Color(0.88, 0.88, 0.88, 1)
sky_horizon_color = Color(1.6682, 1.6682, 1.6682, 1)
ground_bottom_color = Color(0.66, 0.66, 0.66, 1)
ground_horizon_color = Color(1.6682, 1.6682, 1.6682, 1)

[sub_resource type="Sky" id="Sky_x2hdw"]
sky_material = SubResource("ProceduralSkyMaterial_sfl3n")

[sub_resource type="Environment" id="Environment_wtgk7"]
background_mode = 2
sky = SubResource("Sky_x2hdw")
tonemap_mode = 2
fog_enabled = true
fog_mode = 1
fog_light_color = Color(1, 1, 1, 1)
fog_density = 1.0
fog_depth_begin = 1.0
fog_depth_end = 5.0

[sub_resource type="BoxShape3D" id="BoxShape3D_sfl3n"]
size = Vector3(1, 1.46069, 1)

[node name="maze" type="Node3D"]
transform = Transform3D(0.999951, 0, -0.00986095, 0, 1, 0, 0.00986095, 0, 0.999951, 0, 0, 0)
script = ExtResource("1_x2hdw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wtgk7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="cheshire" parent="." instance=ExtResource("2_sfl3n")]
transform = Transform3D(1, 9.31323e-10, -1.86265e-09, 0, 0.808689, 0.588237, 0, -0.588237, 0.808689, -2.01963, 1.27407, -0.772554)

[node name="chessboard_blank_0" parent="." instance=ExtResource("3_x2hdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2)

[node name="chessboard_blank_1" parent="." instance=ExtResource("3_x2hdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="chessboard_blank_2" parent="." instance=ExtResource("3_x2hdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2)

[node name="chessboard_blank_3" parent="." instance=ExtResource("3_x2hdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="chessboard_blank_4" parent="." instance=ExtResource("3_x2hdw")]

[node name="chessboard_blank_5" parent="." instance=ExtResource("3_x2hdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="chessboard_blank_6" parent="." instance=ExtResource("3_x2hdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 2)

[node name="chessboard_blank_7" parent="." instance=ExtResource("3_x2hdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="chessboard_blank_8" parent="." instance=ExtResource("3_x2hdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)

[node name="area_3d_0" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2)
collision_mask = 0
monitoring = false

[node name="camera_3d" type="Camera3D" parent="area_3d_0"]
transform = Transform3D(0.838813, -0.391965, 0.377829, 0, 0.694005, 0.71997, -0.544419, -0.60392, 0.58214, 0.512841, 0.592735, 0.780873)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_0"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="area_3d_1" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
collision_mask = 0
monitoring = false

[node name="camera_3d" type="Camera3D" parent="area_3d_1"]
transform = Transform3D(0.999999, 9.31323e-10, -4.65661e-10, 0, 0.693402, 0.720551, 9.31323e-10, -0.720551, 0.693402, -0.00421559, 0.571184, 0.75953)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_1"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="area_3d_2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2)

[node name="camera_3d" type="Camera3D" parent="area_3d_2"]
transform = Transform3D(0.83867, 0.39244, -0.377653, 0, 0.693402, 0.720551, 0.544639, -0.604305, 0.581535, -0.424884, 0.562549, 0.859293)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_2"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="area_3d_3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="camera_3d" type="Camera3D" parent="area_3d_3"]
transform = Transform3D(0.844327, -0.469097, 0.258956, 0, 0.483282, 0.875464, -0.535826, -0.739179, 0.408049, 0.510648, 0.965071, 0.558544)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_3"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="area_3d_4" type="Area3D" parent="."]

[node name="camera_3d" type="Camera3D" parent="area_3d_4"]
transform = Transform3D(0.999992, -0.00208063, -0.00325188, 0.00378586, 0.363639, 0.931532, -0.000755662, -0.931537, 0.363644, -0.00718563, 0.871021, 0.458353)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_4"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="area_3d_5" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="camera_3d" type="Camera3D" parent="area_3d_5"]
transform = Transform3D(0.844328, 0.469097, -0.258956, 0, 0.483282, 0.875464, 0.535827, -0.739179, 0.408049, -0.411873, 0.965071, 0.663584)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_5"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="area_3d_6" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.96056, 0, 1.99981)

[node name="camera_3d" type="Camera3D" parent="area_3d_6"]
transform = Transform3D(0.882947, -0.465871, 0.0580274, 0, 0.123601, 0.992332, -0.469471, -0.876176, 0.109134, -0.010112, 1.25783, 0.161591)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_6"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="area_3d_7" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0394438, 0, 1.99981)

[node name="camera_3d" type="Camera3D" parent="area_3d_7"]
transform = Transform3D(0.99998, -0.00268101, -0.00562604, 0.00591286, 0.122878, 0.992404, -0.00196932, -0.992417, 0.122892, -0.0101121, 1.06314, 0.161591)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_7"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="area_3d_8" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.03944, 0, 1.99981)

[node name="camera_3d" type="Camera3D" parent="area_3d_8"]
transform = Transform3D(0.882947, 0.465871, -0.0580274, 0, 0.123601, 0.992332, 0.469471, -0.876176, 0.109134, -0.010112, 1.25783, 0.161591)
fov = 61.32

[node name="collision_shape_3d" type="CollisionShape3D" parent="area_3d_8"]
transform = Transform3D(1, 0, -1.81611e-07, 0, 1, 0, 1.81611e-07, 0, 1, 0, -0.698608, 0)
shape = SubResource("BoxShape3D_sfl3n")

[node name="pastor" type="Node3D" parent="."]
visible = false
script = ExtResource("4_wtgk7")
metadata/_custom_type_script = "uid://d37nkxik3au1i"
